Incorrect usage of execFile function in multiple locations

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.5.1
    • Affects Version/s: 2.5.0
    • Component/s: Shell, Storage
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The execFile function is declared as taking bool, bool and int params:

      Scope::execFile(const string& filename, bool printResult, bool reportError,
      int timeoutMs)

      but in the following places called with three boolean arguments:
      shell/dbshell.cpp:932: scope->execFile( files[i] , false , true, false)
      scripting/engine_spidermonkey.cpp:1805: s->execFile( filename, false, true, false)
      scripting/engine_v8.cpp:607: scope->execFile(filename, false, true, false)

            Assignee:
            Andreas Nilsson (Inactive)
            Reporter:
            Andreas Nilsson (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: