SERVER-9503 Corrected usage of execFile function calls